improve tar extraction code, fix (extraction) issues not being added to the artifact in ArtifactUnwrapTask, add context to ComponentPatternData for validation, fix issue in DirectoryScanTask that would try to "list" on files